[package]
name = "yahtzeebot"
version = "0.1.0"
edition = "2021"

# [profile.release]
# lto = "thin" # doesn't seem to help
# lto = true # neither this 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
cached = "0.33.0"
counter = "0.5.3"
ordered-float = "2.10.0"
# tqdm-rs = "0.1.1"
indicatif = "0.16.2"
tinyvec = {version="1.5.1", features=["rustc_1_55"]}
dashmap = "5.1.0"
rayon = "1.5.1"