[package]
name = "yahtzeebot"
version = "0.1.0"
edition = "2021"

# [profile.release]
# lto = "thin" # doesn't seem to help
# lto = true # neither this 
# debug = 1 # this includes source line-debug info for profilers e.g Scalene

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
# cached = "0.33.0"
counter = "0.5.3"
ordered-float = "2.10.0"
indicatif = "0.16.2"
tinyvec = {version="1.5.1", features=["rustc_1_55", "serde"]}
rayon = "1.5.1"
once_cell = "1.10.0"
rustc-hash = "1.1.0"
serde_derive = "1.0.119"
serde = { version =  "1.0.136", features = ["derive"] } 
bincode = "1.3.3"

[dev-dependencies]
assert_approx_eq = "1.1.0"